[gd_scene load_steps=11 format=3 uid="uid://bxxevkfb1rv8o"]

[ext_resource type="Script" path="res://to_do_item/task/task.gd" id="1_e0rqx"]
[ext_resource type="Theme" uid="uid://leiuhrufh5o8" path="res://theme/theme.tres" id="2_jvgun"]
[ext_resource type="PackedScene" uid="uid://cmguvp3hu2b3f" path="res://to_do_item/to_do_item_action_texture_rect.tscn" id="2_ow43e"]
[ext_resource type="Texture2D" uid="uid://dmoykkrqddh8k" path="res://addons/images/kenney_icons/down.png" id="2_qxhkb"]
[ext_resource type="Script" path="res://common/text_focus.gd" id="3_pdtx7"]
[ext_resource type="Texture2D" uid="uid://dgmvsxmm31bo7" path="res://addons/images/kenney_icons/cross.png" id="4_3wct2"]
[ext_resource type="Texture2D" uid="uid://cmm42xkdqt61" path="res://addons/images/kenney_icons/plus.png" id="5_2mxuq"]
[ext_resource type="Texture2D" uid="uid://8v8i84xnoeup" path="res://addons/images/kenney_icons/return.png" id="6_8huod"]
[ext_resource type="Script" path="res://to_do_item/project/task_container.gd" id="8_j3pgj"]
[ext_resource type="Texture2D" uid="uid://c1avhvgbpp5di" path="res://addons/images/kenney_icons/right.png" id="9_wq7mb"]

[node name="Task" type="VBoxContainer" groups=["Saveables"]]
offset_right = 463.0
offset_bottom = 95.0
focus_mode = 2
theme_override_constants/separation = 20
script = ExtResource("1_e0rqx")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 4
focus_mode = 2
theme_override_constants/separation = 20

[node name="ToDoItemActionTextureRect" parent="HBoxContainer" instance=ExtResource("2_ow43e")]
unique_name_in_owner = true
layout_mode = 2

[node name="TaskStateButton" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
texture_filter = 2
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
mouse_default_cursor_shape = 2
theme = ExtResource("2_jvgun")
theme_type_variation = &"RedButton"

[node name="LineEdit" type="LineEdit" parent="HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(500, 50)
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/minimum_character_width = 15
theme_override_font_sizes/font_size = 34
placeholder_text = "Enter project.."
alignment = 1
clear_button_enabled = true
script = ExtResource("3_pdtx7")

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 2
theme_override_constants/separation = 10

[node name="NewTaskButton" type="Button" parent="HBoxContainer/HBoxContainer"]
texture_filter = 2
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 2
theme = ExtResource("2_jvgun")
theme_type_variation = &"GreenButton"
theme_override_constants/icon_max_width = 40
icon = ExtResource("5_2mxuq")
icon_alignment = 1
expand_icon = true

[node name="ResetButton" type="Button" parent="HBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 2
theme = ExtResource("2_jvgun")
theme_type_variation = &"PurpleButton"
theme_override_constants/icon_max_width = 60
icon = ExtResource("6_8huod")
icon_alignment = 1
expand_icon = true

[node name="DeleteButton" type="Button" parent="HBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 2
theme = ExtResource("2_jvgun")
theme_type_variation = &"RedButton"
theme_override_constants/icon_max_width = 60
icon = ExtResource("4_3wct2")
icon_alignment = 1
expand_icon = true

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 40

[node name="TaskContainer" type="VBoxContainer" parent="MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
focus_mode = 2
script = ExtResource("8_j3pgj")
task = null
folded_icon = ExtResource("9_wq7mb")
unfolded_icon = ExtResource("2_qxhkb")

[connection signal="mouse_entered" from="HBoxContainer/LineEdit" to="HBoxContainer/LineEdit" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="HBoxContainer/LineEdit" to="HBoxContainer/LineEdit" method="_on_mouse_exited"]
[connection signal="text_submitted" from="HBoxContainer/LineEdit" to="MarginContainer/TaskContainer" method="_on_line_edit_text_submitted"]
[connection signal="pressed" from="HBoxContainer/HBoxContainer/NewTaskButton" to="MarginContainer/TaskContainer" method="_on_new_task_button_pressed"]
[connection signal="pressed" from="HBoxContainer/HBoxContainer/ResetButton" to="MarginContainer/TaskContainer" method="_on_reset_button_pressed"]
[connection signal="pressed" from="HBoxContainer/HBoxContainer/DeleteButton" to="." method="_on_delete_button_pressed"]
